# streamload-webrtc

./: .gitignore  CMakeLists.txt  HttpServer.cpp  HttpServer.h  Listener.cpp  Listener.h  README.md  RTC.cpp  RTCManager.cpp  RTCManager.h  SharedState.cpp  SharedState.h  WebSocketSession.cpp  WebSocketSession.h  signaling_server.cpp
test/: HttpServer.cpp  Listener.cpp  RTC.cpp  RTCManager.cpp  RTCManager.h  SharedState.cpp  WebSocketSession.h  client.js  index.html
web/: HttpServer.cpp  RTC.cpp  SharedState.cpp  client.html  client.js  index.html
